correct namespace name